--- a/nera-frontend/public/admin.html
+++ b/nera-frontend/public/admin.html
@@ -11,7 +11,7 @@
       font-family: 'Segoe UI', sans-serif;
     }
     .admin-panel {
-      max-width: 900px;
+      max-width: 1000px;
       margin: 60px auto;
       background: white;
       padding: 30px;
@@ -24,6 +24,10 @@
     }
     .btn-decline {
       background-color: #dc3545;
+      color: white;
+    }
+    .btn-topup {
+      background-color: #2a5298;
       color: white;
     }
   </style>
@@ -39,8 +43,27 @@
   <div class="admin-panel">
     <h3 class="text-center mb-4">Admin Dashboard</h3>
 
-    <!-- Withdrawal Requests -->
-    <h5 class="mt-4">Withdrawal Requests</h5>
+    <!-- 🔄 Manual Top-up -->
+    <div class="mb-5">
+      <h5>Manual Top-up</h5>
+      <div class="row g-3 align-items-center">
+        <div class="col-md-4">
+          <input type="text" id="topupUserId" class="form-control" placeholder="User ID" />
+        </div>
+        <div class="col-md-3">
+          <input type="number" id="topupAmount" class="form-control" placeholder="Amount (₦)" />
+        </div>
+        <div class="col-md-3">
+          <button class="btn btn-topup w-100" onclick="manualTopup()">Top Up</button>
+        </div>
+        <div class="col-md-12">
+          <p id="topupMsg" class="mt-2"></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 🏧 Withdrawal Requests -->
+    <h5>Withdrawal Requests</h5>
     <table class="table table-bordered">
       <thead>
         <tr>
@@ -65,9 +88,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    const API_BASE = 'https://nerainsight.onrender.com/api';  // <-- Updated to Render backend URL
-    const token = localStorage.getItem('neraToken'); // Admin should be logged in
-
+    const API_BASE = 'https://nerainsight.onrender.com/api';
+    const token = localStorage.getItem('neraToken');
     const withdrawalTableBody = document.getElementById('withdrawalTableBody');
 
     async function loadWithdrawals() {
@@ -80,7 +102,6 @@
 
         if (!res.ok) throw new Error('Failed to fetch requests');
         const data = await res.json();
-
         withdrawalTableBody.innerHTML = '';
 
         if (data.length === 0) {
@@ -137,13 +158,41 @@
       }
     }
 
+    async function manualTopup() {
+      const userId = document.getElementById('topupUserId').value.trim();
+      const amount = parseInt(document.getElementById('topupAmount').value);
+      const msg = document.getElementById('topupMsg');
+
+      msg.textContent = '';
+      if (!userId || !amount || amount < 1) {
+        msg.textContent = 'Please provide a valid user ID and amount';
+        msg.style.color = 'red';
+        return;
+      }
+
+      try {
+        const res = await fetch(`${API_BASE}/topup`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ userId, amount })
+        });
+
+        const data = await res.json();
+        msg.style.color = res.ok ? 'green' : 'red';
+        msg.textContent = data.message || (res.ok ? 'Top-up successful' : 'Top-up failed');
+      } catch (error) {
+        msg.style.color = 'red';
+        msg.textContent = 'Error performing top-up';
+      }
+    }
+
     loadWithdrawals();
   </script>
-<script>
-  const token = localStorage.getItem('neraToken');
-  if (!token) {
-    window.location.href = 'login.html';
-  }
-</script>
+
+  <script>
+    if (!token) {
+      window.location.href = 'login.html';
+    }
+  </script>
 </body>
 </html>
