Complete updates: withdrawal request & approval logic, admin panel fixes, frontend-backend integration improvements

--- a/public/invest.html
+++ b/public/invest.html
@@ -56,7 +56,7 @@
           <h5>Starter Package</h5>
           <p><strong>Deposit:</strong> ₦2,000</p>
           <p><strong>Daily Return:</strong> ₦429</p>
-          <p><strong>Total Return:</strong> ₦3,005</p>
+          <p><strong>Withdrawal Amount:</strong> ₦3,000</p>
           <button class="btn btn-nera w-100 invest-btn" data-amount="2000">Invest ₦2,000</button>
         </div>
       </div>
@@ -66,7 +66,7 @@
           <h5>Bronze Package</h5>
           <p><strong>Deposit:</strong> ₦3,000</p>
           <p><strong>Daily Return:</strong> ₦715</p>
-          <p><strong>Total Return:</strong> ₦5,005</p>
+          <p><strong>Withdrawal Amount:</strong> ₦5,500</p>
           <button class="btn btn-nera w-100 invest-btn" data-amount="3000">Invest ₦3,000</button>
         </div>
       </div>
@@ -76,7 +76,7 @@
           <h5>Silver Package</h5>
           <p><strong>Deposit:</strong> ₦5,000</p>
           <p><strong>Daily Return:</strong> ₦1,286</p>
-          <p><strong>Total Return:</strong> ₦9,000</p>
+          <p><strong>Withdrawal Amount:</strong> ₦9,000</p>
           <button class="btn btn-nera w-100 invest-btn" data-amount="5000">Invest ₦5,000</button>
         </div>
       </div>
@@ -86,7 +86,7 @@
           <h5>Elite Package</h5>
           <p><strong>Deposit:</strong> ₦7,500</p>
           <p><strong>Daily Return:</strong> ₦1,857</p>
-          <p><strong>Total Return:</strong> ₦13,000</p>
+          <p><strong>Withdrawal Amount:</strong> ₦13,000</p>
           <button class="btn btn-nera w-100 invest-btn" data-amount="7500">Invest ₦7,500</button>
         </div>
       </div>
