--- a/public/admin.html
+++ b/public/admin.html
@@ -90,15 +90,16 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th>User</th>
-          <th>Amount</th>
+          <th>User Phone</th>
+          <th>Amount (₦)</th>
           <th>Bank</th>
           <th>Account</th>
+          <th>Status</th>
           <th>Action</th>
         </tr>
       </thead>
       <tbody id="withdrawalTableBody">
-        <tr><td colspan="5" class="text-center">Loading...</td></tr>
+        <tr><td colspan="6" class="text-center">Loading...</td></tr>
       </tbody>
     </table>
   </div>
@@ -111,7 +112,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    const API_BASE = 'https://nerainsight.onrender.com/api';
+    const API_BASE = 'https://nerainsight-1.onrender.com/api'; // your backend base URL
     const token = localStorage.getItem('neraToken');
 
     const withdrawalTableBody = document.getElementById('withdrawalTableBody');
@@ -127,26 +128,33 @@
         withdrawalTableBody.innerHTML = '';
 
         if (data.length === 0) {
-          withdrawalTableBody.innerHTML = `<tr><td colspan="5" class="text-center">No requests</td></tr>`;
+          withdrawalTableBody.innerHTML = `<tr><td colspan="6" class="text-center">No withdrawal requests</td></tr>`;
           return;
         }
 
         data.forEach(req => {
+          const isPending = req.status === 'pending';
+          const approveBtn = isPending ? `<button class="btn btn-sm btn-approve me-2" onclick="approveRequest('${req._id}')">Approve</button>` : '';
+          const declineBtn = isPending ? `<button class="btn btn-sm btn-decline" onclick="declineRequest('${req._id}')">Decline</button>` : '';
+          const statusBadge = {
+            approved: '<span class="badge bg-success">APPROVED</span>',
+            pending: '<span class="badge bg-warning text-dark">PENDING</span>',
+            declined: '<span class="badge bg-danger">DECLINED</span>'
+          }[req.status] || req.status.toUpperCase();
+
           const row = document.createElement('tr');
           row.innerHTML = `
             <td>${req.userPhone || 'Unknown'}</td>
             <td>₦${req.amount}</td>
             <td>${req.bankName}</td>
             <td>${req.accountNumber}</td>
-            <td>
-              <button class="btn btn-sm btn-approve me-2" onclick="approveRequest('${req._id}')">Approve</button>
-              <button class="btn btn-sm btn-decline" onclick="declineRequest('${req._id}')">Decline</button>
-            </td>
+            <td>${statusBadge}</td>
+            <td>${approveBtn}${declineBtn}</td>
           `;
           withdrawalTableBody.appendChild(row);
         });
       } catch (err) {
-        withdrawalTableBody.innerHTML = `<tr><td colspan="5" class="text-center text-danger">Error loading withdrawals</td></tr>`;
+        withdrawalTableBody.innerHTML = `<tr><td colspan="6" class="text-center text-danger">Error loading withdrawals</td></tr>`;
       }
     }
 
@@ -158,7 +166,7 @@
           headers: { 'Authorization': 'Bearer ' + token }
         });
         const result = await res.json();
-        alert(result.message || 'Approved');
+        alert(result.message || 'Withdrawal approved');
         loadWithdrawals();
       } catch {
         alert('Error approving withdrawal');
@@ -173,7 +181,7 @@
           headers: { 'Authorization': 'Bearer ' + token }
         });
         const result = await res.json();
-        alert(result.message || 'Declined');
+        alert(result.message || 'Withdrawal declined');
         loadWithdrawals();
       } catch {
         alert('Error declining withdrawal');
@@ -218,7 +226,7 @@
         topupTableBody.innerHTML = '';
 
         if (data.length === 0) {
-          topupTableBody.innerHTML = `<tr><td colspan="4" class="text-center">No requests</td></tr>`;
+          topupTableBody.innerHTML = `<tr><td colspan="4" class="text-center">No top-up requests</td></tr>`;
           return;
         }
 
