Initial full project push

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       </div>
       <div class="col-md-4">
         <h5>Referral Rewards</h5>
-        <p>Earn ₦500 + 10% of your referral’s first deposit.</p>
+        <p>Earn 10% of your referral’s first deposit.</p>
       </div>
       <div class="col-md-4">
         <h5>Daily Check-In Bonus</h5>
