--- a/public/register.html
+++ b/public/register.html
@@ -45,7 +45,7 @@
     <form id="registerForm">
       <div class="mb-3">
         <label for="phone" class="form-label">Phone Number (Nigerian)</label>
-        <input type="tel" class="form-control" id="phone" placeholder="08012345678" required pattern="^0[7-9][0-1]\d{8}$">
+        <input type="tel" class="form-control" id="phone" placeholder="08012345678" required pattern="^0[789][01]\d{7}$">
       </div>
 
       <div class="mb-3">
