--- a/public/admin.html
+++ b/public/admin.html
@@ -86,8 +86,14 @@
     </table>
 
     <!-- 🏧 Withdrawal Requests -->
-    <h5 class="mt-5">Withdrawal Requests</h5>
-    <table class="table table-bordered">
+    <div class="d-flex justify-content-between align-items-center mt-5">
+      <h5>Withdrawal Requests</h5>
+      <select id="filterSelect" class="form-select w-auto">
+        <option value="all">All</option>
+        <option value="pending">Pending Only</option>
+      </select>
+    </div>
+    <table class="table table-bordered mt-2">
       <thead>
         <tr>
           <th>User Phone</th>
@@ -112,13 +118,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    const API_BASE = 'https://nerainsight-1.onrender.com/api'; // your backend base URL
+    const API_BASE = 'https://nerainsight-1.onrender.com/api';
     const token = localStorage.getItem('neraToken');
-
     const withdrawalTableBody = document.getElementById('withdrawalTableBody');
     const topupTableBody = document.getElementById('topupTableBody');
 
     async function loadWithdrawals() {
+      const filter = document.getElementById('filterSelect').value;
+
       try {
         const res = await fetch(`${API_BASE}/withdraw/requests`, {
           headers: { 'Authorization': 'Bearer ' + token }
@@ -127,12 +134,16 @@
         const data = await res.json();
         withdrawalTableBody.innerHTML = '';
 
-        if (data.length === 0) {
+        const filtered = filter === 'pending'
+          ? data.filter(req => req.status === 'pending')
+          : data;
+
+        if (filtered.length === 0) {
           withdrawalTableBody.innerHTML = `<tr><td colspan="6" class="text-center">No withdrawal requests</td></tr>`;
           return;
         }
 
-        data.forEach(req => {
+        filtered.forEach(req => {
           const isPending = req.status === 'pending';
           const approveBtn = isPending ? `<button class="btn btn-sm btn-approve me-2" onclick="approveRequest('${req._id}')">Approve</button>` : '';
           const declineBtn = isPending ? `<button class="btn btn-sm btn-decline" onclick="declineRequest('${req._id}')">Decline</button>` : '';
@@ -310,6 +321,7 @@
     } else {
       loadWithdrawals();
       loadTopupRequests();
+      document.getElementById('filterSelect').addEventListener('change', loadWithdrawals);
     }
   </script>
 </body>
