--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -88,10 +88,10 @@
     &copy; 2025 NeraInsight. All rights reserved.
   </footer>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
   <script>
-    const API_BASE = 'https://nerainsight.onrender.com/api'; // ✅ Make sure this is your Termux IP
+    const API_BASE = 'https://nerainsight.onrender.com/api'; // ✅ Your live backend API base
     const token = localStorage.getItem('neraToken');
 
     const walletBalanceEl = document.getElementById('walletBalance');
@@ -106,32 +106,33 @@
       window.location.href = 'login.html';
     }
 
-    // Load user profile
+    // Load profile data
     async function loadProfile() {
       try {
         const res = await fetch(`${API_BASE}/user/profile`, {
           headers: { 'Authorization': 'Bearer ' + token }
         });
+
         if (!res.ok) throw new Error('Failed to fetch profile');
         const data = await res.json();
 
         walletBalanceEl.textContent = `₦${data.wallet.toLocaleString()}`;
         bonusInfoEl.textContent = data.bonusUnlocked 
-          ? '(Bonus unlocked)' 
-          : '(Includes ₦2k signup bonus — locked until deposit)';
-        
-        investmentStatusEl.textContent = data.activeInvestment 
-          ? `Active investment: ₦${data.activeInvestment.amount.toLocaleString()}`
+          ? '(₦2,000 bonus unlocked)' 
+          : '(₦2,000 signup bonus — locked until first deposit)';
+
+        investmentStatusEl.textContent = data.activeInvestment
+          ? `Active: ₦${data.activeInvestment.amount.toLocaleString()}`
           : 'No active investment';
 
       } catch (err) {
-        alert('Session expired or error occurred. Please login again.');
+        alert('Session expired or an error occurred. Please login again.');
         localStorage.removeItem('neraToken');
         window.location.href = 'login.html';
       }
     }
 
-    // Check-in action
+    // Handle check-in
     checkInBtn.addEventListener('click', async () => {
       checkInMessage.textContent = '';
       try {
@@ -139,23 +140,22 @@
           method: 'POST',
           headers: { 'Authorization': 'Bearer ' + token }
         });
-
         const data = await res.json();
         if (res.ok) {
           checkInMessage.style.color = 'green';
-          checkInMessage.textContent = data.message || 'Checked in successfully! You earned ₦50.';
-          loadProfile(); // Refresh wallet
+          checkInMessage.textContent = data.message || 'Check-in successful! You earned ₦50.';
+          loadProfile();
         } else {
           checkInMessage.style.color = 'red';
           checkInMessage.textContent = data.message || 'Check-in failed.';
         }
       } catch {
         checkInMessage.style.color = 'red';
-        checkInMessage.textContent = 'Network error, try again.';
+        checkInMessage.textContent = 'Network error. Please try again.';
       }
     });
 
-    // Logout
+    // Logout handler
     logoutBtn.addEventListener('click', e => {
       e.preventDefault();
       localStorage.removeItem('neraToken');
@@ -163,14 +163,8 @@
       window.location.href = 'login.html';
     });
 
-    // Auto-load dashboard
+    // Load on page start
     loadProfile();
   </script>
-<script>
-  const token = localStorage.getItem('neraToken');
-  if (!token) {
-    window.location.href = 'login.html';
-  }
-</script>
 </body>
 </html>
