--- a/public/insight.html
+++ b/public/insight.html
@@ -40,11 +40,11 @@
 
     <div class="card-box">
       <h5>User Info</h5>
-      <p><strong>Phone:</strong> <span id="phone"></span></p>
-      <p><strong>Wallet Balance:</strong> ₦<span id="wallet"></span></p>
-      <p><strong>Referral Code:</strong> <span id="referralCode"></span></p>
-      <p><strong>Bonus Status:</strong> <span id="bonusStatus"></span></p>
-      <p><strong>Active Investment:</strong> <span id="activeInvestment"></span></p>
+      <p><strong>Phone:</strong> <span id="phone">Loading...</span></p>
+      <p><strong>Wallet Balance:</strong> ₦<span id="wallet">0</span></p>
+      <p><strong>Referral Code:</strong> <span id="referralCode">-</span></p>
+      <p><strong>Bonus Status:</strong> <span id="bonusStatus">-</span></p>
+      <p><strong>Active Investment:</strong> <span id="activeInvestment">-</span></p>
     </div>
   </div>
 
@@ -54,7 +54,7 @@
   </footer>
 
   <script>
-    const API_BASE = 'https://nerainsight.onrender.com/api';
+    const API_BASE = 'https://nerainsight-1.onrender.com/api';
     const token = localStorage.getItem('neraToken');
 
     if (!token) {
@@ -74,17 +74,19 @@
 
         const data = await res.json();
 
-        document.getElementById('phone').textContent = data.phone;
-        document.getElementById('wallet').textContent = data.wallet;
+        document.getElementById('phone').textContent = data.phone || '-';
+        document.getElementById('wallet').textContent = (data.wallet || 0).toLocaleString();
         document.getElementById('referralCode').textContent = data.referralCode || 'Not available';
         document.getElementById('bonusStatus').textContent = data.bonusUnlocked ? 'Unlocked' : 'Locked';
-        document.getElementById('activeInvestment').textContent = data.activeInvestment 
-          ? `₦${data.activeInvestment.amount}` 
+
+        document.getElementById('activeInvestment').textContent = data.activeInvestment
+          ? `₦${data.activeInvestment.amount.toLocaleString()}`
           : 'No active investment';
 
       } catch (err) {
         alert('Session expired or error occurred. Please log in again');
         localStorage.removeItem('neraToken');
+        localStorage.removeItem('neraUser');
         window.location.href = 'login.html';
       }
     }
@@ -98,11 +100,5 @@
 
     loadUserInsights();
   </script>
-<script>
-  const token = localStorage.getItem('neraToken');
-  if (!token) {
-    window.location.href = 'login.html';
-  }
-</script>
 </body>
 </html>
