--- a/public/login.html
+++ b/public/login.html
@@ -42,10 +42,10 @@
   <!-- Login Form -->
   <div class="login-box">
     <h2 class="text-center mb-4">Login to Your Account</h2>
-    <form id="loginForm">
+    <form id="loginForm" autocomplete="off">
       <div class="mb-3">
         <label for="phone" class="form-label">Phone Number</label>
-        <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number" required>
+        <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number" required autocomplete="off">
       </div>
 
       <div class="mb-3">
@@ -56,10 +56,11 @@
           id="password" 
           placeholder="Enter your password"
           required
+          autocomplete="off"
         >
       </div>
 
-      <button type="submit" class="btn btn-nera w-100">Login</button>
+      <button type="submit" class="btn btn-nera w-100" id="loginBtn">Login</button>
     </form>
 
     <div id="message" class="text-center"></div>
@@ -77,16 +78,19 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    const API_BASE = 'https://nerainsight.onrender.com/api';
+    const API_BASE = 'https://nerainsight-1.onrender.com/api';
 
     const form = document.getElementById('loginForm');
     const messageDiv = document.getElementById('message');
+    const loginBtn = document.getElementById('loginBtn');
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
 
       messageDiv.textContent = '';
       messageDiv.style.color = '';
+      loginBtn.disabled = true;
+      loginBtn.textContent = 'Logging in...';
 
       const phone = document.getElementById('phone').value.trim();
       const password = document.getElementById('password').value;
@@ -111,14 +115,15 @@
             window.location.href = 'dashboard.html';
           }, 1500);
         } else {
-          console.error('Login error:', data);
           messageDiv.style.color = 'red';
           messageDiv.textContent = data.message || 'Login failed.';
         }
       } catch (error) {
-        console.error('Network error:', error);
         messageDiv.style.color = 'red';
         messageDiv.textContent = 'Network error. Please try again later.';
+      } finally {
+        loginBtn.disabled = false;
+        loginBtn.textContent = 'Login';
       }
     });
   </script>
