--- a/public/withdraw.html
+++ b/public/withdraw.html
@@ -120,7 +120,6 @@
       window.location.href = 'login.html';
     }
 
-    // Fetch wallet balance
     async function loadWallet() {
       try {
         const res = await fetch(`${API_BASE}/user/profile`, {
@@ -137,7 +136,6 @@
       }
     }
 
-    // Handle withdrawal form
     document.getElementById('withdrawForm').addEventListener('submit', async (e) => {
       e.preventDefault();
       messageDiv.textContent = '';
@@ -154,7 +152,6 @@
       }
 
       try {
-        // Update bank info including accountName
         await fetch(`${API_BASE}/user/update-bank`, {
           method: 'POST',
           headers: {
@@ -164,7 +161,6 @@
           body: JSON.stringify({ accountName, bankName, accountNumber })
         });
 
-        // Request withdrawal
         const res = await fetch(`${API_BASE}/withdraw/request`, {
           method: 'POST',
           headers: {
@@ -177,7 +173,7 @@
         const data = await res.json();
         if (res.ok) {
           alert('✅ Withdrawal request sent!');
-          window.location.href = 'index.html'; // Redirect to home page
+          window.location.href = 'index.html';
         } else {
           messageDiv.style.color = 'red';
           messageDiv.textContent = data.message || 'Withdrawal failed.';
@@ -188,7 +184,6 @@
       }
     });
 
-    // Load withdrawal history
     async function loadWithdrawalHistory() {
       const tbody = document.getElementById('withdrawalHistory');
       tbody.innerHTML = '<tr><td colspan="3" class="text-center">Loading...</td></tr>';
