Updated all frontend URLs to new backend

--- a/public/invest.html
+++ b/public/invest.html
@@ -115,7 +115,7 @@
 
   <script>
     const investButtons = document.querySelectorAll('.invest-btn');
-    const API_BASE = 'https://nerainsight-1.onrender.com/api'; // ✅ fixed base
+    const API_BASE = 'https://nerainsight.onrender.com/api'; // ✅ fixed base
 
     investButtons.forEach(button => {
       button.addEventListener('click', () => {
