--- a/public/referral.html
+++ b/public/referral.html
@@ -60,7 +60,7 @@
   </footer>
 
   <script>
-    const API_BASE = 'https://nerainsight-1.onrender.com/api'; // corrected base URL
+    const API_BASE = 'https://nerainsight.onrender.com/api'; // corrected base URL
     const token = localStorage.getItem('neraToken');
     const userData = JSON.parse(localStorage.getItem('neraUser'));
     const referralLinkInput = document.getElementById('referralLink');
