--- a/public/admin.html
+++ b/public/admin.html
@@ -118,7 +118,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    const API_BASE = 'https://nerainsight-1.onrender.com/api';
+    const API_BASE = 'https://nerainsight.onrender.com';
     const token = localStorage.getItem('neraToken');
     const withdrawalTableBody = document.getElementById('withdrawalTableBody');
     const topupTableBody = document.getElementById('topupTableBody');
