--- a/public/insight.html
+++ b/public/insight.html
@@ -54,7 +54,7 @@
   </footer>
 
   <script>
-    const API_BASE = 'https://nerainsight-1.onrender.com/api';
+    const API_BASE = 'https://nerainsight.onrender.com';
     const token = localStorage.getItem('neraToken');
 
     if (!token) {
