--- a/public/login.html
+++ b/public/login.html
@@ -78,7 +78,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    const API_BASE = 'https://nerainsight-1.onrender.com/api';
+    const API_BASE = 'httpshttps://nerainsight.onrender.com/api';
 
     const form = document.getElementById('loginForm');
     const messageDiv = document.getElementById('message');
