--- a/public/register.html
+++ b/public/register.html
@@ -98,7 +98,7 @@
       const referralCode = document.getElementById('referral').value.trim();
 
       try {
-        const response = await fetch('https://nerainsight-1.onrender.com/api/auth/register', {
+        const response = await fetch('https://nerainsight.onrender.com/api/auth/register', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ phone, password, referralCode })
