--- a/public/withdraw.html
+++ b/public/withdraw.html
@@ -111,7 +111,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const API_BASE = 'https://nerainsight-1.onrender.com/api';
+    const API_BASE = 'https://nerainsight.onrender.com/api';
     const token = localStorage.getItem('neraToken');
     const messageDiv = document.getElementById('message');
 
