--- a/public/login.html
+++ b/public/login.html
@@ -45,7 +45,7 @@
     <form id="loginForm" autocomplete="off">
       <div class="mb-3">
         <label for="phone" class="form-label">Phone Number</label>
-        <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number" required autocomplete="off">
+        <input type="text" class="form-control" id="phone" placeholder="Enter your phone number" required autocomplete="off">
       </div>
 
       <div class="mb-3">
@@ -78,7 +78,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    const API_BASE = 'httpshttps://nerainsight.onrender.com/api';
+    const API_BASE = 'https://nerainsight.onrender.com/api';
 
     const form = document.getElementById('loginForm');
     const messageDiv = document.getElementById('message');
