--- a/public/insight.html
+++ b/public/insight.html
@@ -7,44 +7,57 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #f8f9fa;
+      background-color: #f5f7fa;
       font-family: 'Segoe UI', sans-serif;
     }
-    .card-box {
+    .card {
       border-radius: 16px;
-      padding: 20px;
-      background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      box-shadow: 0 0 12px rgba(0,0,0,0.08);
+    }
+    .info-label {
+      font-weight: bold;
+      color: #333;
     }
   </style>
 </head>
 <body>
 
+  <!-- ✅ Token Session Check -->
+  <script>
+    const token = localStorage.getItem('neraToken');
+    const user = JSON.parse(localStorage.getItem('neraUser'));
+
+    if (!token || !user) {
+      alert("Session expired or error occurred. Please log in again");
+      localStorage.clear();
+      window.location.href = 'login.html';
+    }
+  </script>
+
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
-    <a class="navbar-brand" href="index.html">₦eraInsight</a>
+    <a class="navbar-brand" href="dashboard.html">₦eraInsight</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
         <li class="nav-item"><a class="nav-link" href="invest.html">Invest</a></li>
         <li class="nav-item"><a class="nav-link" href="withdraw.html">Withdraw</a></li>
         <li class="nav-item"><a class="nav-link" href="referral.html">Referral</a></li>
-        <li class="nav-item"><a class="nav-link" href="#" id="logoutBtn">Logout</a></li>
       </ul>
     </div>
   </nav>
 
-  <!-- Content -->
+  <!-- Main Content -->
   <div class="container my-5">
     <h2 class="text-center mb-4">Your Investment Insights</h2>
-
-    <div class="card-box">
-      <h5>User Info</h5>
-      <p><strong>Phone:</strong> <span id="phone">Loading...</span></p>
-      <p><strong>Wallet Balance:</strong> ₦<span id="wallet">0</span></p>
-      <p><strong>Referral Code:</strong> <span id="referralCode">-</span></p>
-      <p><strong>Bonus Status:</strong> <span id="bonusStatus">-</span></p>
-      <p><strong>Active Investment:</strong> <span id="activeInvestment">-</span></p>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card p-4">
+          <p><span class="info-label">Phone:</span> <span id="phone">Loading...</span></p>
+          <p><span class="info-label">Total Investments:</span> <span id="totalInvestments">₦0</span></p>
+          <p><span class="info-label">Active Packages:</span> <span id="activePackages">0</span></p>
+          <p><span class="info-label">Profit This Week:</span> <span id="weeklyProfit">₦0</span></p>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -53,52 +66,38 @@
     &copy; 2025 NeraInsight. All rights reserved.
   </footer>
 
+  <!-- Scripts -->
   <script>
-    const API_BASE = 'https://nerainsight.onrender.com';
-    const token = localStorage.getItem('neraToken');
+    const API_BASE = 'https://nerainsight.onrender.com/api';
 
-    if (!token) {
-      alert('You are not logged in. Redirecting to login.');
-      window.location.href = 'login.html';
-    }
+    document.getElementById('phone').textContent = user.phone;
 
-    async function loadUserInsights() {
+    async function loadInsights() {
       try {
-        const res = await fetch(`${API_BASE}/user/profile`, {
+        const res = await fetch(`${API_BASE}/insights`, {
           headers: {
             'Authorization': 'Bearer ' + token
           }
         });
 
-        if (!res.ok) throw new Error('Failed to load');
+        if (!res.ok) {
+          throw new Error("Session expired");
+        }
 
         const data = await res.json();
 
-        document.getElementById('phone').textContent = data.phone || '-';
-        document.getElementById('wallet').textContent = (data.wallet || 0).toLocaleString();
-        document.getElementById('referralCode').textContent = data.referralCode || 'Not available';
-        document.getElementById('bonusStatus').textContent = data.bonusUnlocked ? 'Unlocked' : 'Locked';
-
-        document.getElementById('activeInvestment').textContent = data.activeInvestment
-          ? `₦${data.activeInvestment.amount.toLocaleString()}`
-          : 'No active investment';
-
+        document.getElementById('totalInvestments').textContent = '₦' + data.totalInvestments;
+        document.getElementById('activePackages').textContent = data.activePackages;
+        document.getElementById('weeklyProfit').textContent = '₦' + data.weeklyProfit;
       } catch (err) {
-        alert('Session expired or error occurred. Please log in again');
-        localStorage.removeItem('neraToken');
-        localStorage.removeItem('neraUser');
+        alert("Session expired or error occurred. Please log in again");
+        localStorage.clear();
         window.location.href = 'login.html';
       }
     }
 
-    // Logout logic
-    document.getElementById('logoutBtn').addEventListener('click', () => {
-      localStorage.removeItem('neraToken');
-      localStorage.removeItem('neraUser');
-      window.location.href = 'login.html';
-    });
-
-    loadUserInsights();
+    loadInsights();
   </script>
+
 </body>
 </html>
