--- a/public/admin.html
+++ b/public/admin.html
@@ -43,6 +43,11 @@
   <div class="admin-panel">
     <h3 class="text-center mb-4">Admin Dashboard</h3>
 
+    <!-- 📊 Insights Button -->
+    <div class="text-center mb-4">
+      <a href="admin-insights.html" class="btn btn-primary">📊 View Insights</a>
+    </div>
+
     <!-- 🔄 Manual Top-up -->
     <div class="mb-4">
       <h5>Manual Top-up</h5>
